kirby.css
body{
	margin: 0;
	font-family: Helvetica, Arial, sans-serif;
	font-size: 20px;
	line-height: 30px;
}

header{
	background-color: teal;
	text-align: center;
	padding-top: 50px;
	padding-bottom: 25px;

}

h1, h2{
	font-family: Helvetica, Arial;
}

header h1{
	color: white;
	font-size: 50px;
}

header img{
	border-radius: 600px;
	width: 300px;
	border: 15px solid white;
}

header p{
	color: white;
	padding-top: 20px;
}

main{
	max-width: 800px;
	margin: 0 auto;
	padding: 20px;
}

main img{
	max-width: 100%;
	border: 15px solid #C70039;
}

h2{
	font-size: 30px;
	color: #C70039;
	margin: 40px 0 10px;
}

a{
	color: white;
}

a:hover{
	color: white;
	background-color: #483a94;
}

footer{
	background-color: teal;
	text-align: center;
	color: white;
	padding: 50px;
}

footer p{
	margin: 0;
}

footer a{
	color: white;
}

footer a:hover{
	opacity: .5;
	background-color: transparent;
}

p.caption{
	color: #999999;
	font-style: italic;
	margin-top: 0;
}

